--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "email": "Your Email",
-    "password": "Your Password",
+    "email": "pxrplebot6@gmail.com",
+    "password": "BotBot2020!",
     "cid": "CID_768_Athena_Commando_F_HardcoreSportz",
     "bid": "BID_004_BlackKnight",
     "pid": "Pickaxe_Lockjaw",
